// Copyright (c) 2016 Matthias Neugebauer <mtneug@mailbox.org>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package api;

import "types.proto";

service Hypochronos {
  rpc StatesAt (StatesAtRequest) returns (StatesAtResponse);
  rpc Events (EventsRequest) returns (stream EventsResponse);
}

message StatesAtRequest {
  string NodeID = 1;
  int64 Time = 2;
}

message StatesAtResponse {
  repeated State States = 1;
}

message EventsRequest {
  Filters Filters = 1;
}

message EventsResponse {
  Event Event = 1;
}
