// Copyright (c) 2016 Matthias Neugebauer <mtneug@mailbox.org>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package api;

message Filters {
  // Key value is from the FilterKey enum.
  map<string, string> Args = 1;
}

enum FilterKey {
  Action = 0;
  ActorType = 1;
  ActorID = 2;
  NodeID = 3;
  ServiceID = 4;
}

message Node {
  // TODO: rename fields with plugin
  string ID = 1;
}

message Service {
  string ID = 1;
  string Name = 2;
}

message State {
  string Value = 1;
  int64 Until = 2;
  Node Node = 3;
  Service Service = 4;
}

// StateValue lists known states to hypochronos.
enum StateValue {
  // undefined indicates that the state of the resource is undefined.
  undefined = 0;
  // activated indicates that the resource is activated.
  activated = 1;
  // deactivated indicates that the resource is deactivated.
  deactivated = 2;
}

message Event {
  string ID = 1;
  EventAction Action = 2;
  string ActorID = 3;
  EventActorType ActorType = 4;
  oneof Actor {
    Node Node = 5;
    Service Service = 6;
    State State = 7;
  }
}

enum EventActorType {
  node = 0;
  service = 1;
  state = 2;
}

enum EventAction {
  created = 0;
  updated = 1;
  deleted = 2;
}
